test/legs/2/empty-charset.err
empty-charset.legs:1:1-11: note: in 'section_patterns' structure:
| # Patterns
  ~~~~~~~~~~
empty-charset.legs:2:1-6: note: in 'pattern' structure:
| empty: []
  ~~~~~
empty-charset.legs:2:6-7: note: in 'colon_pattern_expr' structure:
| empty: []
       ~
empty-charset.legs:2:8-9: note: in 'charset' prefix rule:
| empty: []
         ~
empty-charset.legs:2:9-10: parse error: 'charset' prefix rule expects charset_expr; received brack_c.
| empty: []
          ~

